# LambdaClass

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: preferences.toml
docs/decisions/: 0000-template.md  0001-local-duckdb-parquet.md  0002-options-chain-source.md  README.md
src/lambdaclass/: __init__.py  __main__.py  cli.py  config.py  state.py
src/lambdaclass/backtest/: AGENTS.md  engine.py
src/lambdaclass/data_adapters/: AGENTS.md  base.py  optionsdx_chain_loader.py  optionsdx_normalize.py  optionsdx_parser.py  optionsdx_quality.py  yfinance_adapter.py
src/lambdaclass/reporting/: AGENTS.md  __init__.py  metrics.py  tearsheet.py
src/lambdaclass/storage/: AGENTS.md  __init__.py  duckdb_store.py
src/lambdaclass/strategies/: AGENTS.md  __init__.py  base.py  scaffolder.py
strategies/2026-04/: _template.py  demo.py
tests/: test_adapter_contract.py  test_engine.py  test_optionsdx_chain_loader.py  test_optionsdx_normalize_integration.py  test_optionsdx_parser.py  test_optionsdx_quality.py  test_preferences.py  test_scaffolder.py  test_security_hardening.py
tests/fixtures/optionsdx/btc_eod_202106/: btc_eod_202106.txt
tests/fixtures/optionsdx/spy_eod_201201/: spy_eod_201201.txt
