[project]
name = "lambdaclass"
version = "0.1.0"
description = "Stock and options strategy backtesting toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1.3",
  "numpy>=2.1.0",
  "pandas>=2.2.0",
  "plotly>=5.24.0",
  "pyarrow>=18.0.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "py-vollib>=1.0.1",
  "typer>=0.12.5",
  "yfinance>=0.2.43",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
lambdaclass = "lambdaclass.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
